Bug 56443 - EDITING: German (Switzerland) spell check broken
Summary: EDITING: German (Switzerland) spell check broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
3.6.2.2 release
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: BSA target:4.3.0 target:4.2.0.1
Keywords:
: 60917 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-27 01:03 UTC by Tom Meinen
Modified: 2016-10-12 13:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot: de-CH / de-DE "compare_grüsse.jpg" (44.94 KB, image/jpeg)
2012-10-28 23:36 UTC, manj_k
Details
Test file "Grüsse_de-Ch_de-DE.odt" (15.27 KB, application/vnd.oasis.opendocument.text)
2012-10-28 23:42 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Meinen 2012-10-27 01:03:43 UTC
Problem description: German (Switzerland) spell dictionary behaves like German (Germany) one.  

Steps to reproduce:
1. .... Set Writer to use German (Switzerland) dictionary.  Make sure "spell check while you type" is turned on.  
2. ....Type the letter ending greeting "Liebe Grüsse" (lit: dear greetings)  With two s's "ss" instead of the esset "ß", you're using the standard Swiss spelling.  However, you get a red squiggly line under "Grüsse."  
3. .... Click on the spell check icon.  The check suggests that you spell "Grüsse" with the standard spelling from Germany, "Grüße".  

Current behavior: Flags "Grüsse" as misspelled and other words using "ss" instead of "ß".  

Expected behavior: Unlike Germans, the Swiss spell all double s's with "ss" not "ß".  Germans spell many double s's with the esset.  The Swiss do not use the esset (ß) character.  

This problem was not happening in OpenOffice Writer 3.2.  
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20100101 Firefox/15.0.1
Comment 1 manj_k 2012-10-28 23:36:24 UTC
Created attachment 69204 [details]
Screenshot: de-CH / de-DE "compare_grüsse.jpg"
Comment 2 manj_k 2012-10-28 23:39:27 UTC
Confirmed  (on WinXP 32b) with

- LibreOffice 3.5.7.2 (Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b)
- LibreOffice 3.6.3.2 (Build ID: 58f22d5)

AutoSpellcheck / Spelling and Grammar (F7).

See screenshot "compare_grüsse.jpg".

Added test file "Grüsse_de-Ch_de-DE.odt".

Workaround:
Add "German (de-CH frami) dictionaries 2012.06.17"[1] as user extension via Extension Manager.


[1] http://extensions.libreoffice.org/extension-center/german-de-ch-frami-dictionaries
Comment 3 manj_k 2012-10-28 23:42:55 UTC
Created attachment 69205 [details]
Test file "Grüsse_de-Ch_de-DE.odt"
Comment 4 manj_k 2013-02-15 21:47:36 UTC
*** Bug 60917 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2013-12-09 19:16:02 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb56ab9bca5e917d86a7dc24eb144353c405f07c

fdo#56443 allow different name for .dic and .aff files



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-12-09 19:18:24 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37f7a6b6c529140c827a875be7ad483a08e16631&h=libreoffice-4-2

fdo#56443 allow different name for .dic and .aff files


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-12-09 21:26:00 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a59bb25069d587b28c1d39e33b01accffc0de66&h=libreoffice-4-2

Revert "fdo#56443 allow different name for .dic and .aff files"


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-12-09 21:28:21 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7666149128dc6381481303fe46a3a374f31bee1f

Revert "fdo#56443 allow different name for .dic and .aff files"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-12-09 21:33:52 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/dictionaries/commit/?id=bdd76ca138ded701c4436ca09d6961009bc1114b

fdo#56443 .dic and .aff name must be the same



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-09 21:34:09 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/dictionaries/commit/?id=7ac7087863c1940937b3dd9616a22a61e28f24f6&h=libreoffice-4-2

fdo#56443 .dic and .aff name must be the same


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 manj_k 2013-12-18 19:15:38 UTC
Many thanks, Andras.
Verified with
bundled dict-de, German (Austria, Germany, Switzerland) spelling dictionaries, hyphenation rules, and thesaurus 2013.12.06,
LibreOffice v4.2.0.1 (Build ID: 7bf567613a536ded11709b952950c9e8f7181a4a),
on Win7_x64.