fdo#56443 allow different name for .dic and .aff files

For example, de_CH_frami.dic and de_AT_frami.dic use de_DE_frami.aff.

Change-Id: I1d3770ad871b4714f7e595e1cd13f5fd7f224a1f